--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -41,7 +41,7 @@ div.gallery img {
 				<li class="nav-item active" sec:authorize="!isAuthenticated()"><a
 					class="nav-link" href="/login">Login</a></li>
 				<li class="nav-item active" sec:authorize="isAuthenticated()"><a
-					class="nav-link" href="/logout">Logout</a></li>
+					class="nav-link" href="javascript:$('#logoutForm').submit();">Logout</a></li>
 				<li class="nav-item active" sec:authorize="!isAuthenticated()"><a
 					class="nav-link" href="/register">Register</a></li>
 
@@ -49,6 +49,13 @@ div.gallery img {
 
 		</div>
 	</nav>
+	
+	<form id="logoutForm" method="post" action="/logout">
+
+		<input type="hidden" th:name="${_csrf.parameterName}"
+			th:value="${_csrf.token}" />
+
+	</form>
 
 	<div>
 		<form method="POST" enctype="multipart/form-data" action="/">
@@ -59,6 +66,8 @@ div.gallery img {
 				</tr>
 				<tr>
 					<td></td>
+					<input type="hidden" th:name="${_csrf.parameterName}"
+						th:value="${_csrf.token}" />
 					<td><input type="submit" value="Upload" /></td>
 				</tr>
 			</table>
@@ -74,6 +83,8 @@ div.gallery img {
 				<form action="/delete" method="POST">
 					<table>
 						<input type="text" th:value="*{file}" name="text" readonly="true" />
+						<input type="hidden" th:name="${_csrf.parameterName}"
+							th:value="${_csrf.token}" />
 						<td><input type="submit" value="Delete" /></td>
 					</table>
 				</form>
