--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -39,12 +39,20 @@ div.gallery img {
 				<li class="nav-item active"><a class="nav-link" href="/users">Users</a></li>
 				<li class="nav-item active"><a class="nav-link" href="/login">Login</a></li>
 				<li class="nav-item active" sec:authorize="isAuthenticated()"><a
-					class="nav-link" href="/logout">Logout</a></li>
-				<li class="nav-item active"><a class="nav-link" href="/register">Register</a></li>
+					class="nav-link" href="javascript:$('#logoutForm').submit();">Logout</a></li>
+				<li class="nav-item active"><a class="nav-link"
+					href="/register">Register</a></li>
 			</ul>
 
 		</div>
 	</nav>
+
+	<form id="logoutForm" method="post" action="/logout">
+
+		<input type="hidden" th:name="${_csrf.parameterName}"
+			th:value="${_csrf.token}" />
+
+	</form>
 
 	<form th:action="@{/appLogin}" method="POST">
 		User Name : <input type="text" name="app_username" /> Password: <input
